--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.2.6",
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.1",
@@ -22,6 +23,7 @@
     "cmdk": "^1.0.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
+    "next-cloudinary": "^6.7.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
